--- a/css/main.css
+++ b/css/main.css
@@ -70,11 +70,15 @@
 
 .main_visual {
     position: relative;
-    height: 800px;
-    background: url(../images/main_visual02.jpg) no-repeat center center/cover;
 }
 
-.main_visual::before {
+
+.main_slide .bg {
+    position: relative;
+    height: 800px;
+}
+
+.main_slide .bg::before {
     content: "";
     display: block;
     width: 100%;
@@ -85,7 +89,19 @@
     background: rgba(0, 0, 0, .4);
 }
 
-.main_visual .slogan_wrap {
+.main_slide .v_box01 {
+    background: url(../images/main_visual00.gif)no-repeat center center/cover;
+}
+
+.main_slide .v_box02 {
+    background: url(../images/main_visual01.jpg)no-repeat center center/cover;
+}
+
+.main_slide .v_box03 {
+    background: url(../images/main_visual02.jpg)no-repeat center center/cover;
+}
+
+.main_slide .slogan_wrap {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -95,34 +111,53 @@
 }
 
 
-.main_visual .slogan_wrap h2 {
+.main_slide .slogan_wrap h2 {
     font-size: 18px;
     font-weight: 400;
     color: #fff;
     margin-bottom: 20px;
 }
 
-.main_visual .slogan_wrap .tit span {
+.main_slide .slogan_wrap .tit span {
     display: block;
     line-height: 1.5;
 }
 
 
-.main_visual .slogan_wrap .tit {
+.main_slide .slogan_wrap .tit {
     font-size: 40px;
     font-weight: 600;
     color: #fff;
     margin-bottom: 30px;
 }
 
-.main_visual .slogan_wrap .des {
+.main_slide .slogan_wrap .des {
     font-size: 16px;
     font-weight: 400;
     color: #fff;
+    margin-bottom: 10px;
 }
 
+.main_visual .arrows {
+    position: absolute;
+    top: 55%;
+    right: 50%;
 
+    display: flex;
+    gap: 10px;
 
+    transform: translate(50%, 50%);
+    margin: 50px 550px 0 0;
+}
+
+.main_visual .arrows i {
+    font-size: 20px;
+    color: #dad6d6;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 
 /* 2. 제품 */
